kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: default
spec:
  rules:
  - host: test-ingress.info
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: research-activity-log-go-service
            port:
              number: 3333
